--- a/templates/articles/article_new.html
+++ b/templates/articles/article_new.html
@@ -2,7 +2,7 @@
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
-            ioGrow Blog
+            {{ _('ioGrow Blog')}}
             <i class="icon-angle-down"></i>
            </a>
         </div>
@@ -30,7 +30,7 @@
                   <h2 class="page-title">
             <a href="/#/articles" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     {{_("Articles")}} > <%= article.title %>  </h2>
-            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(article)">Create</button>
+            <button class="btn red newAccountBtnOnscroll pull-right hidden" ng-click="save(article)">{{ _('Create')}}</button>
   </div>
 
   </div>
@@ -39,7 +39,7 @@
   <div class="loader-container row" ng-show="isLoading">
         <div class="loader-dialog col-md-4 col-md-offset-4 ">
           <div class="loader-content">
-            Loading...
+            {{ _('Loading...')}}
           </div>
         </div>
 
@@ -60,8 +60,8 @@
   <div class="col-md-9">
     <div class="row">
         <div class="showPage col-md-12 newActionsBtn">
-          <span>Crete a new article </span>
-          <button class="btn red newAccountBtn pull-right" ng-click="save(article)">Create</button>
+          <span>{{ _('Crete a new article')}} </span>
+          <button class="btn red newAccountBtn pull-right" ng-click="save(article)">{{ _('Create')}}</button>
           <div class="clearfix"></div>
         </div>
        <div class="showPage slimForm col-md-12 margin-bottom-15">
@@ -76,7 +76,7 @@
                           <div class="col-md-12">
 
                             <div class="form-group">
-                              <label class="control-label col-md-2">Title</label>
+                              <label class="control-label col-md-2">{{ _('Title')}}</label>
                               <div class="col-md-10">
                                 <input autofocus ng-model="article.title" placeholder="{{_('Type here the title of your post...')}}" type="text" class="form-control">
                               </div>
@@ -90,15 +90,15 @@
                           <div class="col-md-12">
 
                                 <div class="news-blocks blank-card blank-card-yellow">
-                                <h3>Intro Card</h3>
+                                <h3>{{ _('Intro Card')}}</h3>
                                 <div class="form-group">
                                   <textarea id="intro-card" ng-model="article.intro_text" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7"></textarea>
                                  </div>
                                 </div>
                               <div class="news-blocks blank-card blank-card-bluep">
-                                <h3>Full article card</h3>
+                                <h3>{{ _('Full article card')}}</h3>
                                 <div class="form-group">
-                                  <textarea id="full-article" ng-model="article.full_text" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7"></textarea>
+                                  <textarea id="full-article" ng-model="article.full_text" placeholder="{{ _('Enter text ...')}}" id="noteBody" class="form-control ng-pristine ng-valid" rows="7"></textarea>
                                  </div>
 
 
@@ -164,9 +164,9 @@
                      </div>
               </div>
               <div class="modal-footer">
-                  <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                  <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel')}}</button>
 
-                  <input  type="submit" ng-click="pushElement(address,addresses,'addresses')" class="btn green" ng-disabled="!address.country" value="Add this address">
+                  <input  type="submit" ng-click="pushElement(address,addresses,'addresses')" class="btn green" ng-disabled="!address.country" value="{{ _('Add this address')}}">
                   <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                 </form>
