--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -33,7 +33,7 @@
   <div class="loader-container row" ng-show="isLoading">
     <div class="loader-dialog col-md-4 col-md-offset-4 ">
       <div class="loader-content">
-        Loading...
+        {{ _('Loading...')}}
       </div>
     </div>
   </div>
@@ -117,7 +117,7 @@
     <div class="modal-content">
         <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">Delete Contact</h3>
+                <h3 id="myModalLabel" class="modal-title">{{ _('Delete Contact')}}</h3>
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
@@ -344,10 +344,10 @@
                         <label  class="col-md-3 control-label">{{_("Custom Field")}} </label>
                         <div class="col-md-9">
                           <div class="form-group">
-                               <input type="text" class="form-control" placeholder="Field"  ng-model="customField.field">
+                               <input type="text" class="form-control" placeholder="{{ _('Field')}}"  ng-model="customField.field">
                           </div>
                           <div class="form-group">
-                               <input type="text" class="form-control" placeholder="Value"  ng-model="customField.value">
+                               <input type="text" class="form-control" placeholder="{{ _('Value')}}"  ng-model="customField.value">
                           </div>
                         </div>
                      </div>
@@ -533,7 +533,7 @@
               <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">Delete Account</h3>
+                <h3 id="myModalLabel" class="modal-title">{{ _('Delete Account')}}</h3>
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
@@ -557,7 +557,7 @@
               <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">Delete Information</h3>
+                <h3 id="myModalLabel" class="modal-title">{{ _('Delete Information')}}</h3>
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
@@ -621,10 +621,10 @@
                      </div>
             </div>
             <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel')}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document" ng-click="createDocument(newdocument)">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-hide="isLoading" type="submit" class="btn green" value="{{ _('Create this document')}}" ng-click="createDocument(newdocument)">
+                <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...')}}" disabled>
 
             </form>
             </div>
@@ -669,7 +669,7 @@
                         <label  class="required col-md-3 control-label">{{_("Stage")}} </label>
                         <div class="col-md-9">
                           <select ng-model="stage_selected" class="form-control" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages | orderBy: 'name':true"  >
-                            <option value="">-- choose Stage --</option>
+                            <option value="">-- {{ _('choose Stage')}} --</option>
 
                           </select>
 
@@ -717,7 +717,7 @@
 
                         <div class="col-md-9">
                            <select class="form-control" ng-model="casee.priority">
-                            <option value="1">1 - Low</option>
+                            <option value="1">1 - {{ _('Low')}}</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
@@ -726,7 +726,7 @@
                             <option value="7">7</option>
                             <option value="8">8</option>
                             <option value="9">9</option>
-                            <option value="10">10 - Critical</option>
+                            <option value="10">10 - {{ _('Critical')}}</option>
                           </select>
 
                         </div>
@@ -737,7 +737,7 @@
 
                         <div class="col-md-9">
                             <select  class="form-control" ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
-                            <option value="">Choose Status</option>
+                            <option value="">{{ _('Choose Status')}}</option>
                             <!--option value=""><%=status_selected.status%></option-->
                           </select>
 
@@ -830,8 +830,8 @@
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Add this task">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-hide="isLoading" type="submit" class="btn green" value="{{ _('Add this task')}}">
+                <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...')}}" disabled>
 
             </form>
             </div>
@@ -854,10 +854,10 @@
                      </div>
             </div>
             <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+              <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Cancel')}}</button>
 
-               <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document">
-                <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+               <input ng-hide="isLoading" type="submit" class="btn green" value="{{ _('Create this document')}}">
+                <input ng-show="isLoading" type="submit" class="btn green" value="{{ _('Loading...')}}" disabled>
 
             </form>
             </div>
